[metadata]
name = 'lotusops'
version = '0.0.1'
description = 'A DevOps tool for lotus(filecoin)'
author = 'frank G.'
author_email = 'gustav0125@outlook.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/deep2essence/lotusops'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
