[metadata]
name = lotusops
version = 0.0.1
author = Frank G.
author_email = gustav0125@outlook.com
description = A DevOps tool for lotus(filecoin)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deep2essence/lotusops
project_urls =
    Bug Tracker = https://github.com/deep2essence/lotusops/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[wheel]
universal = 1

[versioneer]
VCS = git
versionfile_source = lotusops/_version.py
versionfile_build = lotusops/_version.py
tag_prefix = 
parentdir_prefix = ./

# [flake8]
# max-line-length = 85

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ./